# genesis-core

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  RFC-0001-PoF.md  RFC-0002-PoEI.md  RFC-0003-DIOS.md  RFC-0004-TPSM.md  RFC-0005-PoEI.md  RFC-0006-GPP.md  RFC-0007-GEXi.md  RFC-0008-GTAL.md  RFC-0009-GCI.md  RFC-0010-GHCF.md  RFC-0011-GIFF.md  RFC-0012-GELF.md  RFC-0013-GSDF.md  RFC-0014-GDAO.md  RFC-0015-GLAB.md  RFC-0016-GIFF.md  RFC-0017-GHCF.md  RFC-0018-GPP.md  RFC-0019-GEX.md  RFC-0021-FLOWCREDITS-UBI.md  RFC-0022-PROOF-OF-PROGRESS.md  RFC-0023-ADAPTIVE-SYNAPTIC-WEIGHTING.md  RFC-0023-VNN.md  RFC-0025-TRR-TEE-ATTESTATION.md  rfc-0005-gnr.md
src/: lib.rs  main.rs
