[package]
name = "genesis-core"
version = "0.1.0"
edition = "2021"
authors = ["Advanced Intelligence Machines <contact@aim-genesis.org>"]
description = "Core framework for Genesis — a decentralized, spatial AI and payment protocol."
license = "Apache-2.0"
repository = "https://github.com/aim-genesis/genesis-core"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
ed25519-dalek = "1.0"
merkle_light = "0.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
